<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="25dp"
    android:layout_marginBottom="25dp"
    android:orientation="vertical"
    android:padding="25dp">

    <TextView
        android:id="@+id/outputText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@android:drawable/btn_default"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/butC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/butC" />

        <Button
            android:id="@+id/butPlusMinus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="btnPress"
            android:text="@string/butPlusMinus" />

        <Button
            android:id="@+id/butProc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:text="@string/butProc" />

        <Button
            android:id="@+id/butDiv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/butDiv" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:onClick="btnPress"
            android:text="@string/button1" />

        <Button
            android:id="@+id/but2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:onClick="btnPress"
            android:text="@string/button2" />

        <Button
            android:id="@+id/but3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:onClick="btnPress"
            android:text="@string/button3" />

        <Button
            android:id="@+id/butMul"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:onClick="btnPress"
            android:text="@string/butMul" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:onClick="btnPress"
            android:text="@string/button4" />

        <Button
            android:id="@+id/but5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:onClick="btnPress"
            android:text="@string/button5" />

        <Button
            android:id="@+id/but6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:onClick="btnPress"
            android:text="@string/button6" />

        <Button
            android:id="@+id/butMinus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:onClick="btnPress"
            android:text="@string/butMinus" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:onClick="btnPress"
            android:text="@string/button7" />

        <Button
            android:id="@+id/but8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:onClick="btnPress"
            android:text="@string/button8" />

        <Button
            android:id="@+id/but9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:onClick="btnPress"
            android:text="@string/button9" />

        <Button
            android:id="@+id/butPlus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:onClick="btnPlus"
            android:text="@string/butPlus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but0"
            android:layout_width="309dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:background="@android:drawable/btn_default"
            android:onClick="btnPress"
            android:text="@string/button0" />

        <Button
            android:id="@+id/butPoint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="4"
            android:background="@android:drawable/btn_default"
            android:onClick="btnPress"
            android:text="@string/buttonPoint" />

        <Button
            android:id="@+id/butEq"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="4"
            android:background="@android:drawable/btn_default"
            android:onClick="btnPress"
            android:text="@string/butEq" />
    </LinearLayout>

</LinearLayout>